data/derived/comb/progs/unify/prog4247.ml.out
Characters 29-34:
  let fixpoint (f,b) = wwhile (g b f
                               ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
